# HSE-ACS-HW

ca_homework_1-master/: CMakeLists.txt  README.md  cartoon.cpp  cartoon.h  container.cpp  container.h  documentary.cpp  documentary.h  fiction.cpp  fiction.h  main.cpp  movie.cpp  movie.h  utils.cpp  utils.h
ca_homework_1-master/tests/: random.txt.out  random_sorted.txt.out  test1.txt  test1.txt.out  test1_sorted.txt.out  test2.txt  test2.txt.out  test2_sorted.txt.out  test3.txt  test3.txt.out  test3_sorted.txt.out
